--- a/assets/css/simple-sidebar.css
+++ b/assets/css/simple-sidebar.css
@@ -23,22 +23,12 @@
 }
 
 #sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 250px;
-    width: 0;
-    height: 100%;
-    margin-left: -250px;
-    overflow-y: auto;
+    position: relative;
     background: #000;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-}
-
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
 }
 
 #page-content-wrapper {
@@ -60,6 +50,8 @@
 .form-group label{
     display: block;
     font-size: 15px;
+    color: #f7f7f7;
+    margin-bottom: 4px;
 }
 .form-group input {
     width: 100%;
@@ -69,8 +61,7 @@
 }
 
 .sidebar-nav {
-    position: absolute;
-    top: 70px;
+    top: 85px;
     width: 250px;
     margin: 0;
     padding: 0;
@@ -125,8 +116,18 @@
 
     #sidebar-wrapper {
         width: 250px;
+        z-index: 1000;
+        position: fixed;
+        left: 250px;
+        height: 100%;
+        margin-left: -250px;
     }
-
+    .sidebar-nav {
+        position: absolute;
+        max-height: 92%;
+        overflow: scroll;
+        width: 100%;
+    }
     #wrapper.toggled #sidebar-wrapper {
         width: 0;
     }
